--- a/scss/global/_layout.scss
+++ b/scss/global/_layout.scss
@@ -34,7 +34,7 @@ button {
 
   .intro {
     text-align: center;
-    margin: 41px auto 64px; // 41px auto 156px; //77px auto 173px; //10vh auto 15vh;
+    margin: 41px auto 80px; // 41px auto 156px; //77px auto 173px; //10vh auto 15vh;
     max-width: 660px;
     color: $accentwhite;
     font-size: 1.25em;
